aoc22_day11 part2